--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres;Database=simplex;Username=user;Password=password"
+  },
+  "CompilerService": {
+    "BaseUrl": "http://simplex-compiler-service:8080"
+  }
 }
