Set up AWS for image storage

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=simplex-database-service;Port=5432;Database=simplex_db;User Id=postgres;Password=POSTGRES_PASSWORD;"
   },
-"CompilerService": {
+  "CompilerService": {
     "BaseUrl": "http://simplex-compiler-service:8080"
   },
-  "JwtKey": "QVc8vqGSGjE6gWZ9Rv6zT4l2U5mY8x3kp9ZVQnhz8us="
+  "JwtKey": "QVc8vqGSGjE6gWZ9Rv6zT4l2U5mY8x3kp9ZVQnhz8us=",
+  "AWS": {
+    "AccessKey": "AKIA2UC274RUOLPFCHOT",
+    "SecretKey": "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",
+    "Region": "eu-north-1",
+    "BucketName": "simpleximages"
+  }
 }
